Fixed the logs tab alignment

--- a/ui/src/styles/layout/element-plus-overload.scss
+++ b/ui/src/styles/layout/element-plus-overload.scss
@@ -164,6 +164,7 @@
 
     .el-select__wrapper {
         background-color: var(--input-bg);
+        height: 100%;
 
         &.is-disabled {
             html.dark & {
